--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
 	color: #e93b68;
 	font-family: 'Barlow';
 	font-size: 1.2em;
-	font-weight: 900;
+	font-weight: 600;
 	text-align: right;
 	display: block;
 	max-width: 640px;
@@ -33,9 +33,9 @@ header {
 	padding-top: 64px;
 	padding-bottom: 96px;
 
-	/*background-color: #ff1451;*/
+	background-color: #ff1451;
 	background: url(hero.png);
-	background-position: top;
+	background-size: cover;
 }
 
 header .logo {
@@ -204,7 +204,7 @@ header .logo {
 	width: 672px;
 	position: absolute;
 	top: 124px;
-	left: -64px;
+	left: -24px;
 	z-index: 0;
 }
 
@@ -270,13 +270,11 @@ header .logo {
 
 
 
-
-
 footer {
 	width: 100%;
 	display: block;
 	float: left;
-	background-color: #ff1451;
+	background-color: #e91e63;
 	height: 64px;
 }
 
@@ -315,4 +313,66 @@ footer .fwrap ul li {
 footer .fwrap ul li img {
 	width: 24px;
 	height: 24px;
+}
+
+.stop-scrolling {
+  	height: 100%;
+  	overflow: hidden;
+}
+
+.model {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	background-color: white;
+	z-index: 2;
+
+	display: block;
+	visibility: hidden;
+}
+
+.model nav {
+	width: 100%;
+	height: 32px;
+	padding: 16px;
+
+	/*background-color: red;*/
+}
+
+.model nav button {
+	width: 32px;
+	height: 32px;
+	border: none;
+	background: white;
+	cursor: pointer;
+}
+
+.model h1 {
+	width: 90%;
+	max-width: 640px;
+	display: block;
+	margin: 32px auto;
+	font-family: 'Barlow';
+	font-weight: 600;
+	color: #263238;
+}
+
+.model p {
+	width: 90%;
+	max-width: 640px;
+	display: block;
+	margin: 16px auto;
+	font-family: 'Barlow';
+	font-weight: 400;
+	font-size: 0.8em;
+	line-height: 1.6em;
+	color: #263238;
+}
+
+.model .note {
+	color: #ff1451;
 }
