--- a/index.css
+++ b/index.css
@@ -339,7 +339,7 @@ footer .fwrap ul li img {
 .model nav {
 	width: 100%;
 	height: 32px;
-	padding: 16px;
+	padding: 16px 0;
 
 	/*background-color: red;*/
 }
@@ -348,6 +348,9 @@ footer .fwrap ul li img {
 	width: 32px;
 	height: 32px;
 	border: none;
+	margin-right: 16px;
+	display: block;
+	float: right;
 	background: white;
 	cursor: pointer;
 }
