Organized file structure

--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ header {
 	padding-bottom: 96px;
 
 	background-color: #ff1451;
-	background: url(hero.png);
+	background: url(assets/hero.png);
 	background-size: cover;
 }
 
