--- a/index.css
+++ b/index.css
@@ -55,6 +55,49 @@ header .logo {
 	background-color: white;
 	border-radius: 4px;
 	box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.12);
+
+	max-height: 328px;
+	overflow-y: hidden;
+	position: relative;
+}
+
+.card-full {
+	max-height: none;
+}
+
+.card .continue-reading {
+	width: 100%;
+	height: 84px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.card .continue-reading:before {
+	content: "";
+	display: block;
+	float: left;
+	width: 100%;
+	height: 36px;
+	background: linear-gradient(transparent, white);
+}
+
+.card .continue-reading a {
+	line-height: 48px;
+	width: 100%;
+	display: block;
+	float: right;
+	background: white;
+	color: #ff1451;
+	font-size: 0.8em;
+	text-decoration: none;
+	font-family: 'Barlow', sans-serif;
+	font-weight: 600;
+}
+
+.card .continue-reading a span {
+	margin-left: 32px;
 }
 
 .card hr {
@@ -282,7 +325,7 @@ footer {
 	width: 100%;
 	display: block;
 	float: left;
-	background-color: #ba124a;
+	background-color: #ff1451;
 	height: 64px;
 }
 
