--- a/index.css
+++ b/index.css
@@ -24,7 +24,6 @@
 	display: block;
 	max-width: 640px;
 	margin: 0 auto;
-	vertical-align: center;
 }
 
 header {
@@ -34,7 +33,7 @@ header {
 	padding-bottom: 96px;
 
 	background-color: #ff1451;
-	background: url(assets/hero.png);
+	background: url(assets/hero.jpg);
 	background-size: cover;
 }
 
@@ -319,6 +318,57 @@ header .logo {
 	text-align: center;
 	margin-bottom: 48px;
 	display: block;
+}
+
+.sponsors {
+	width: 100%;
+	display: block;
+	float: left;
+}
+
+.sponsors-holder {
+	display: block;
+	width: 90%;
+	max-width: 640px;
+	min-width: 300px;
+	margin: 0 auto;
+}
+
+.sponsors-holder h1 {
+	width: 90%;
+	max-width: 640px;
+	font-family: 'Barlow';
+	font-weight: 600;
+	color: #263238;
+	display: block;
+	margin: 0 auto; 
+	text-align: center;
+	margin-bottom: 16px;
+}
+
+.sponsors-holder ul {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.sponsors-holder ul li {
+	width: 196px;
+	height: 160px;
+	position: relative;
+}
+
+.sponsors-holder ul li img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
 }
 
 footer {
