--- a/index.css
+++ b/index.css
@@ -189,6 +189,68 @@ header .logo {
 	box-shadow: 0px 4px 20px -4px rgba(0,0,0,0.2);
 }
 
+.socials {
+	background-color: #232a2d;
+	width: 100%;
+}
+
+.socials .socials-holder {
+	background-image: url(./assets/socials.png);
+	min-height: 540px;
+	display: block;
+	width: 90%;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	max-width: 1080px;
+	min-width: 300px;
+	margin: auto;
+}
+
+.socials .socials-holder .details {
+	padding-top: 320px;
+}
+
+.socials .socials-holder h2 {
+	font-family: 'Barlow';
+	font-weight: 400;
+	font-size: 1em;
+	color: white;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.socials .socials-holder h1 {
+	font-family: 'Barlow';
+	font-weight: 900;
+	font-size: 3.6em;
+	color: white;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+}
+
+@media only screen and (max-width: 1080px) {
+	.socials .socials-holder {
+		background-image: url(./assets/socials.png);
+		min-height: auto;
+	}
+
+	.socials .socials-holder .details {
+		padding-top: 120px;
+		padding-bottom: 40px;
+	}
+
+	.socials .socials-holder h2 {
+		font-size: 1em;
+	}
+	
+	.socials .socials-holder h1 {
+		font-size: 1.6em;
+	}
+}
+
 .app {
 	background-color: white;
 	box-shadow: inset 0px 24px 88px -24px rgba(255,20,83,0.16);
@@ -329,9 +391,10 @@ header .logo {
 .sponsors-holder {
 	display: block;
 	width: 90%;
-	max-width: 640px;
+	max-width: 1080px;
 	min-width: 300px;
 	margin: 0 auto;
+	margin-bottom: 32px;
 }
 
 .sponsors-holder h1 {
